--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "assets/favicon.gif",
+      "sizes": "220x220",
+      "type": "image/gif"
     },
     {
-      "src": "logo192.png",
+      "src": "assets/icon192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "assets/icon512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
