--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "loneweeb",
+  "name": "loneweeb",
   "icons": [
     {
       "src": "assets/favicon.gif",
