--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,23 @@
 {
     "compilerOptions": {
-      "target": "es5",
-      "module": "commonjs",
-      "lib": ["DOM", "ESNext"],
+      "target": "ES2017",
+      "module": "ES2022",
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
+      "lib": ["ESNext",
+      "DOM",
+      "DOM.Iterable"],
       "allowJs": true,
       "jsx": "react-jsx",
       "outDir": "./build",
-      "strict": true,
+      "strict": false,
+      "noEmit": true,
       "esModuleInterop": true,
-      "resolveJsonModule": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "checkJs": true,
+      
     },
-    "include": ["src"],
+    "include": ["src",  "src/custom.d.ts"],
     "exclude": ["node_modules"]
   }
   
