--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yofukashino.github.io",
   "version": "2.0.0",
   "private": true,
-  "homepage": "https:/yofukashino.github.io",
+  "homepage": "https://yofukashino.github.io",
   "engines": {
     "node": ">=18.0.0"
   },
