--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prettier:check": "prettier ./src --check",
+    "prettier:fix": "prettier ./src --write"
   },
   "eslintConfig": {
     "extends": [
